// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Add proxy and grants through the IDatabaseCluster facade 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Db5D02A0A9": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AutoMinorVersionUpgrade": true,
        "BackupRetentionPeriod": 7,
        "CopyTagsToSnapshot": true,
        "DBClusterParameterGroupName": "default.aurora-postgresql17",
        "DBSubnetGroupName": {
          "Ref": "DbSubnets93851898",
        },
        "DeletionProtection": true,
        "EnableCloudwatchLogsExports": [
          "postgresql",
        ],
        "EnableIAMDatabaseAuthentication": true,
        "Engine": "aurora-postgresql",
        "EngineVersion": "17.4",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DbSecretCF6D79B0",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DbSecretCF6D79B0",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "PerformanceInsightsEnabled": false,
        "Port": 5432,
        "ServerlessV2ScalingConfiguration": {
          "MaxCapacity": 4,
          "MinCapacity": 0.5,
        },
        "StorageEncrypted": true,
        "StorageType": "aurora",
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "VpcSecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "DbSecurityGroupC34ABFAB",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBCluster",
      "UpdateReplacePolicy": "Retain",
    },
    "DbLogRetentionpostgresql52689C0A": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/rds/cluster/",
              {
                "Ref": "Db5D02A0A9",
              },
              "/postgresql",
            ],
          ],
        },
        "RetentionInDays": 30,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "DbProxy8FB1B91A": {
      "Properties": {
        "Auth": [
          {
            "AuthScheme": "SECRETS",
            "IAMAuth": "REQUIRED",
            "SecretArn": {
              "Ref": "DbSecretAttachment7AED447C",
            },
          },
        ],
        "DBProxyName": "Proxy",
        "EngineFamily": "POSTGRESQL",
        "RequireTLS": true,
        "RoleArn": {
          "Fn::GetAtt": [
            "DbProxyIAMRoleB3C60B70",
            "Arn",
          ],
        },
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "VpcSecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "DbProxyProxySecurityGroup5CA069F5",
              "GroupId",
            ],
          },
        ],
        "VpcSubnetIds": [
          {
            "Ref": "VpcIsolatedSubnet1SubnetE48C5737",
          },
          {
            "Ref": "VpcIsolatedSubnet2Subnet16364B91",
          },
        ],
      },
      "Type": "AWS::RDS::DBProxy",
    },
    "DbProxyIAMRoleB3C60B70": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "rds.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DbProxyIAMRoleDefaultPolicy78EC1615": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "DbSecretAttachment7AED447C",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DbProxyIAMRoleDefaultPolicy78EC1615",
        "Roles": [
          {
            "Ref": "DbProxyIAMRoleB3C60B70",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DbProxyProxySecurityGroup5CA069F5": {
      "Properties": {
        "GroupDescription": "SecurityGroup for Database Proxy",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "DbProxyProxyTargetGroup7F38655A": {
      "DependsOn": [
        "DbReader17E0CBDF4",
        "Db5D02A0A9",
        "DbWriter9BD1608D",
      ],
      "Properties": {
        "ConnectionPoolConfigurationInfo": {},
        "DBClusterIdentifiers": [
          {
            "Ref": "Db5D02A0A9",
          },
        ],
        "DBProxyName": {
          "Ref": "DbProxy8FB1B91A",
        },
        "TargetGroupName": "default",
      },
      "Type": "AWS::RDS::DBProxyTargetGroup",
    },
    "DbReader17E0CBDF4": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "DbWriter9BD1608D",
        "VpcIsolatedSubnet1RouteTableAssociationD300FCBB",
        "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA",
      ],
      "Properties": {
        "DBClusterIdentifier": {
          "Ref": "Db5D02A0A9",
        },
        "DBInstanceClass": "db.serverless",
        "Engine": "aurora-postgresql",
        "PromotionTier": 1,
        "PubliclyAccessible": false,
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Retain",
    },
    "DbSecretAttachment7AED447C": {
      "Properties": {
        "SecretId": {
          "Ref": "DbSecretCF6D79B0",
        },
        "TargetId": {
          "Ref": "Db5D02A0A9",
        },
        "TargetType": "AWS::RDS::DBCluster",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "DbSecretCF6D79B0": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{"username":"postgres"}",
        },
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Retain",
    },
    "DbSecurityGroupC34ABFAB": {
      "Properties": {
        "GroupDescription": "RDS security group",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "DbSecurityGroupfromTestStackDbProxyProxySecurityGroup6A99DD41IndirectPortDC6741AB": {
      "Properties": {
        "Description": "Allow connections to the database Cluster from the Proxy",
        "FromPort": {
          "Fn::GetAtt": [
            "Db5D02A0A9",
            "Endpoint.Port",
          ],
        },
        "GroupId": {
          "Fn::GetAtt": [
            "DbSecurityGroupC34ABFAB",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "DbProxyProxySecurityGroup5CA069F5",
            "GroupId",
          ],
        },
        "ToPort": {
          "Fn::GetAtt": [
            "Db5D02A0A9",
            "Endpoint.Port",
          ],
        },
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "DbSubnets93851898": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "DBSubnetGroupDescription": "Subnets for Default database",
        "SubnetIds": [
          {
            "Ref": "VpcIsolatedSubnet1SubnetE48C5737",
          },
          {
            "Ref": "VpcIsolatedSubnet2Subnet16364B91",
          },
        ],
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "DbWriter9BD1608D": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "VpcIsolatedSubnet1RouteTableAssociationD300FCBB",
        "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA",
      ],
      "Properties": {
        "DBClusterIdentifier": {
          "Ref": "Db5D02A0A9",
        },
        "DBInstanceClass": "db.serverless",
        "Engine": "aurora-postgresql",
        "PromotionTier": 0,
        "PubliclyAccessible": false,
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Retain",
    },
    "Fn9270CBC0": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FnDefaultPolicy1F61ADF2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "rds-db:connect",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":rds-db:us-east-2:100000000000:dbuser:",
                    {
                      "Fn::Select": [
                        6,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Fn::GetAtt": [
                                "DbProxy8FB1B91A",
                                "DBProxyArn",
                              ],
                            },
                          ],
                        },
                      ],
                    },
                    "/{{resolve:secretsmanager:",
                    {
                      "Ref": "DbSecretAttachment7AED447C",
                    },
                    ":SecretString:username::}}",
                  ],
                ],
              },
            },
            {
              "Action": "rds-db:connect",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":rds-db:us-east-2:100000000000:dbuser:",
                    {
                      "Fn::GetAtt": [
                        "Db5D02A0A9",
                        "DBClusterResourceId",
                      ],
                    },
                    "/app_user",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "FnDefaultPolicy1F61ADF2",
        "Roles": [
          {
            "Ref": "Fn9270CBC0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": {
      "DependsOn": [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-100000000000-us-east-2",
          "S3Key": "2819175352ad1ce0dae768e83fc328fb70fb5f10b4a8ff0ccbcb791f02b0716d.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": [
          {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Vpc8378EB38": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcIGWD7BA715C": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "VpcIsolatedSubnet1RouteTable4771E3E5": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIsolatedSubnet1RouteTableAssociationD300FCBB": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnet1RouteTable4771E3E5",
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnet1SubnetE48C5737",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIsolatedSubnet1SubnetE48C5737": {
      "Properties": {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIsolatedSubnet2RouteTable1D30AF7D": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnet2RouteTable1D30AF7D",
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnet2Subnet16364B91",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIsolatedSubnet2Subnet16364B91": {
      "Properties": {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet1DefaultRoute3DA9E72A": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet1RouteTable6C95E38E": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet1RouteTableAssociation97140677": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet1Subnet5C2D37C4": {
      "Properties": {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet2DefaultRoute97F91067": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet2RouteTable94F7E489": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2Subnet691E08A3",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet2Subnet691E08A3": {
      "Properties": {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcVPCGWBF912B6E": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Create cluster with defaults 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Db5D02A0A9": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AutoMinorVersionUpgrade": true,
        "BackupRetentionPeriod": 7,
        "CopyTagsToSnapshot": true,
        "DBClusterParameterGroupName": "default.aurora-postgresql17",
        "DBSubnetGroupName": {
          "Ref": "DbSubnets93851898",
        },
        "DeletionProtection": true,
        "EnableCloudwatchLogsExports": [
          "postgresql",
        ],
        "EnableIAMDatabaseAuthentication": true,
        "Engine": "aurora-postgresql",
        "EngineVersion": "17.4",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DbSecretCF6D79B0",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DbSecretCF6D79B0",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "PerformanceInsightsEnabled": false,
        "Port": 5432,
        "ServerlessV2ScalingConfiguration": {
          "MaxCapacity": 4,
          "MinCapacity": 0.5,
        },
        "StorageEncrypted": true,
        "StorageType": "aurora",
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "VpcSecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "DbSecurityGroupC34ABFAB",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBCluster",
      "UpdateReplacePolicy": "Retain",
    },
    "DbLogRetentionpostgresql52689C0A": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/rds/cluster/",
              {
                "Ref": "Db5D02A0A9",
              },
              "/postgresql",
            ],
          ],
        },
        "RetentionInDays": 30,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "DbReader17E0CBDF4": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "DbWriter9BD1608D",
        "VpcIsolatedSubnet1RouteTableAssociationD300FCBB",
        "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA",
      ],
      "Properties": {
        "DBClusterIdentifier": {
          "Ref": "Db5D02A0A9",
        },
        "DBInstanceClass": "db.serverless",
        "Engine": "aurora-postgresql",
        "PromotionTier": 1,
        "PubliclyAccessible": false,
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Retain",
    },
    "DbSecretAttachment7AED447C": {
      "Properties": {
        "SecretId": {
          "Ref": "DbSecretCF6D79B0",
        },
        "TargetId": {
          "Ref": "Db5D02A0A9",
        },
        "TargetType": "AWS::RDS::DBCluster",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "DbSecretCF6D79B0": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{"username":"postgres"}",
        },
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Retain",
    },
    "DbSecurityGroupC34ABFAB": {
      "Properties": {
        "GroupDescription": "RDS security group",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "DbSubnets93851898": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "DBSubnetGroupDescription": "Subnets for Default database",
        "SubnetIds": [
          {
            "Ref": "VpcIsolatedSubnet1SubnetE48C5737",
          },
          {
            "Ref": "VpcIsolatedSubnet2Subnet16364B91",
          },
        ],
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "DbWriter9BD1608D": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "VpcIsolatedSubnet1RouteTableAssociationD300FCBB",
        "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA",
      ],
      "Properties": {
        "DBClusterIdentifier": {
          "Ref": "Db5D02A0A9",
        },
        "DBInstanceClass": "db.serverless",
        "Engine": "aurora-postgresql",
        "PromotionTier": 0,
        "PubliclyAccessible": false,
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Retain",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": {
      "DependsOn": [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-100000000000-us-east-2",
          "S3Key": "2819175352ad1ce0dae768e83fc328fb70fb5f10b4a8ff0ccbcb791f02b0716d.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": [
          {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Vpc8378EB38": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcIGWD7BA715C": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "VpcIsolatedSubnet1RouteTable4771E3E5": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIsolatedSubnet1RouteTableAssociationD300FCBB": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnet1RouteTable4771E3E5",
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnet1SubnetE48C5737",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIsolatedSubnet1SubnetE48C5737": {
      "Properties": {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIsolatedSubnet2RouteTable1D30AF7D": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnet2RouteTable1D30AF7D",
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnet2Subnet16364B91",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIsolatedSubnet2Subnet16364B91": {
      "Properties": {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet1DefaultRoute3DA9E72A": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet1RouteTable6C95E38E": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet1RouteTableAssociation97140677": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet1Subnet5C2D37C4": {
      "Properties": {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet2DefaultRoute97F91067": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet2RouteTable94F7E489": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2Subnet691E08A3",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet2Subnet691E08A3": {
      "Properties": {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcVPCGWBF912B6E": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Create cluster with explicit settings 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "Db5D02A0A9": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AutoMinorVersionUpgrade": true,
        "BackupRetentionPeriod": 14,
        "CopyTagsToSnapshot": true,
        "DBClusterParameterGroupName": "default.aurora-postgresql16",
        "DBSubnetGroupName": {
          "Ref": "DbSubnets93851898",
        },
        "DatabaseName": "payroll",
        "DeletionProtection": false,
        "EnableCloudwatchLogsExports": [
          "postgresql",
        ],
        "EnableIAMDatabaseAuthentication": false,
        "Engine": "aurora-postgresql",
        "EngineVersion": "16.13",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DbSecretCF6D79B0",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "DbSecretCF6D79B0",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "PerformanceInsightsEnabled": true,
        "PerformanceInsightsRetentionPeriod": 7,
        "Port": 5432,
        "ServerlessV2ScalingConfiguration": {
          "MaxCapacity": 32,
          "MinCapacity": 2,
        },
        "StorageEncrypted": true,
        "StorageType": "aurora-iopt1",
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "VpcSecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "DbSecurityGroupC34ABFAB",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBCluster",
      "UpdateReplacePolicy": "Delete",
    },
    "DbLogRetentionpostgresql52689C0A": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/rds/cluster/",
              {
                "Ref": "Db5D02A0A9",
              },
              "/postgresql",
            ],
          ],
        },
        "RetentionInDays": 30,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "DbReader17E0CBDF4": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "DbWriter9BD1608D",
        "VpcIsolatedSubnet1RouteTableAssociationD300FCBB",
        "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA",
      ],
      "Properties": {
        "DBClusterIdentifier": {
          "Ref": "Db5D02A0A9",
        },
        "DBInstanceClass": "db.serverless",
        "Engine": "aurora-postgresql",
        "PromotionTier": 2,
        "PubliclyAccessible": false,
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "DbReader23269D0E3": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "DbWriter9BD1608D",
        "VpcIsolatedSubnet1RouteTableAssociationD300FCBB",
        "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA",
      ],
      "Properties": {
        "DBClusterIdentifier": {
          "Ref": "Db5D02A0A9",
        },
        "DBInstanceClass": "db.serverless",
        "Engine": "aurora-postgresql",
        "PromotionTier": 2,
        "PubliclyAccessible": false,
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "DbSecretAttachment7AED447C": {
      "Properties": {
        "SecretId": {
          "Ref": "DbSecretCF6D79B0",
        },
        "TargetId": {
          "Ref": "Db5D02A0A9",
        },
        "TargetType": "AWS::RDS::DBCluster",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "DbSecretCF6D79B0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{"username":"postgres"}",
        },
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "DbSecurityGroupC34ABFAB": {
      "Properties": {
        "GroupDescription": "RDS security group",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "DbSubnets93851898": {
      "Properties": {
        "DBSubnetGroupDescription": "Subnets for Default database",
        "SubnetIds": [
          {
            "Ref": "VpcIsolatedSubnet1SubnetE48C5737",
          },
          {
            "Ref": "VpcIsolatedSubnet2Subnet16364B91",
          },
        ],
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
    },
    "DbWriter9BD1608D": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "VpcIsolatedSubnet1RouteTableAssociationD300FCBB",
        "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA",
      ],
      "Properties": {
        "DBClusterIdentifier": {
          "Ref": "Db5D02A0A9",
        },
        "DBInstanceClass": "db.serverless",
        "Engine": "aurora-postgresql",
        "PromotionTier": 0,
        "PubliclyAccessible": false,
        "Tags": [
          {
            "Key": "automation:component-id",
            "Value": "StandardPostgresAuroraServerlessCluster",
          },
          {
            "Key": "automation:component-url",
            "Value": "https://github.com/truemark/cdk",
          },
          {
            "Key": "automation:component-vendor",
            "Value": "TrueMark",
          },
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": {
      "DependsOn": [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-100000000000-us-east-2",
          "S3Key": "2819175352ad1ce0dae768e83fc328fb70fb5f10b4a8ff0ccbcb791f02b0716d.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": [
          {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Vpc8378EB38": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcIGWD7BA715C": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "VpcIsolatedSubnet1RouteTable4771E3E5": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIsolatedSubnet1RouteTableAssociationD300FCBB": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnet1RouteTable4771E3E5",
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnet1SubnetE48C5737",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIsolatedSubnet1SubnetE48C5737": {
      "Properties": {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIsolatedSubnet2RouteTable1D30AF7D": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIsolatedSubnet2RouteTableAssociationF7B18CCA": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnet2RouteTable1D30AF7D",
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnet2Subnet16364B91",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIsolatedSubnet2Subnet16364B91": {
      "Properties": {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet1DefaultRoute3DA9E72A": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet1RouteTable6C95E38E": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet1RouteTableAssociation97140677": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet1Subnet5C2D37C4": {
      "Properties": {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcPublicSubnet2DefaultRoute97F91067": {
      "DependsOn": [
        "VpcVPCGWBF912B6E",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcPublicSubnet2RouteTable94F7E489": {
      "Properties": {
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489",
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2Subnet691E08A3",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcPublicSubnet2Subnet691E08A3": {
      "Properties": {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "automation:id",
            "Value": "TestStack",
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "TestStack/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcVPCGWBF912B6E": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C",
        },
        "VpcId": {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
